yamls/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: argo-tunnel
  labels:
    ingress: argo-tunnel
  name: blog
spec:
  tls:
    - hosts:
        - blog.mad.md
      secretName: mad.md
  rules:
    - host: blog.mad.md
      http:
        paths:
          - backend:
              serviceName: wordpress
              servicePort: http
